--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -373,16 +373,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/new-zealand-united-kingdom-joint-statement-on-cyber-security">New Zealand - United Kingdom Joint Statement on Cyber Security </a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286266.es">Día de San David 2015</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220268.lt">Pasaulinis susitikimas: seksualinio smurto stabdymas konfliktuose</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--7">TURKS AND CAICOS POST CABINET MEETING STATEMENT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/287987.pt">Consulado promove recepção para empresas de Petróleo e Gás</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/changes-to-the-uk-visa-application-process--2">Changes to the UK visa application process in Romania</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220711.pt">Alex Ellis quer mais estudantes mineiros no Reino Unido</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/277623.zh-tw">簽證中心聖誕節與新年假期閉館時間</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/286926.zh">英國更換簽證語言測驗機構</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/international-day-against-homophobia-and-transphobia--2">International Day Against Homophobia and Transphobia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/293828.es-419">Call for Security and Justice Concept Bids</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/angolan-chevening-scholars-reception-in-luanda--2">Reception for Angolan Chevening Scholars held in Luanda</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/211480.pt">Programa Sirius anuncia primeiros vencedores</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/179098.es-419">¡Wenlock y Mandeville buscan dónde estudiar en México!</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-chennai--7">Advice for British nationals in Chennai</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/192069.pt">Fórum atrai empresários interessados em parcerias em mega eventos</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/210097.fr">George Osborne prononce le discours d&#39;automne</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-in-cairo-closed-to-the-public--3">British Embassy in Cairo closed to the public</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-ambassador-honours-positive-role-of-gaa-at-london-gala-dinner--2">British Ambassador to Ireland honours role of the Gaelic Athletic Association</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
