--- a/document-types/external_content.html
+++ b/document-types/external_content.html
@@ -371,16 +371,16 @@ actually any pages with this document type.</p>
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.ukhttp//www.northumberland.gov.uk">Northumberland County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hants.gov.uk">Hampshire County Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.oadby-wigston.gov.uk">Oadby and Wigston Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.downdc.gov.uk">Down District Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.dundeecity.gov.uk">Dundee City Council</a></li>
 <li><a href="https://www.gov.ukhttp//www.telford.gov.uk">Telford &amp; Wrekin Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.centralbedfordshire.gov.uk/">Central Bedfordshire Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.hastings.gov.uk">Hastings Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.tamworth.gov.uk">Tamworth Borough Council</a></li>
-<li><a href="https://www.gov.ukhttp//www.west-dunbarton.gov.uk/">West Dunbartonshire Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.oadby-wigston.gov.uk">Oadby and Wigston Borough Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.bromsgrove.gov.uk">Bromsgrove District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.lancashire.gov.uk/">Lancashire County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.parliament.uk/business/publications/hansard/">Hansard - UK Parliament</a></li>
+<li><a href="https://www.gov.ukhttp//www.powys.gov.uk">Powys County Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.shetland.gov.uk">Shetland Islands Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.thanet.gov.uk">Thanet District Council</a></li>
+<li><a href="https://www.gov.ukhttp//www.cotswold.gov.uk">Cotswold District Council</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=external_content&amp;count=10">Source query from Search API</a></p>
 
