--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -361,16 +361,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/229395.zh-tw">海外申請英國護照的費用調降</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/taipei-office-closures--3">Taipei office closures</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/255674.es-419">La ayuda del Reino Unido llega a iraquíes desplazados a lo largo del norte de Irak</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/joint-ministerial-statement-on-international-anti-corruption-day--2">Joint Ministerial statement on International Anti-Corruption Day</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/queens-birthday-party-held-in-yerevan">Queen&rsquo;s Birthday Party held in Yerevan</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/british-expatriates-its-your-vote-dont-lose-it--3">British expatriates - “It’s your vote, don’t lose it”</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/fco-answers-questions-about-irans-nuclear-programme">FCO answers questions about Iran’s nuclear programme</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/212818.es">El Gobierno británico anuncia un plan para eliminar la burocracia</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/visa-applications--2">Visa applications</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/179074.pt">Consulado promove GREAT Roadshow de Investimento em Curitiba</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--36">Advice for British nationals in Kolkata</a></li>
 <li><a href="https://www.gov.uk/government/world-location-news/186635.ar">السفير كلايف ألدرتون:ندعم الإصلاحات الجارية في المغرب ونثمن دوره في الساحل وسوريا</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/chevening-scholarship-places-in-developing-countries-tripled-for-201516">Chevening Scholarship places in developing countries tripled for 2015/16</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/reduced-consular-services-at-british-embassy-ljubljana--2">Reduced consular services at British Embassy Ljubljana</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/295678.pt">#LOVEisGREAT</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/247572.es-419">México y el Reino Unido en la Cumbre Mundial para Erradicar la Violencia Sexual en Conflictos Armados</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/271974.es-419">Concluye exitosamente la Visita Real en Monterrey</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/240607.es-419">Los exámenes TOEFL o TEIC no se aceptarán para tramitar visas de estudio</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
